chore: french translations

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -1,4 +1,5 @@
  (Half Day),(Demi-Journée),
+ - Net,- Net,
  Currently no stock available in any warehouse,"Actuellement, aucun stock disponible dans aucun entrepôt",
  Purchase Value,Valeur d'achat,
  days.,jours.,
@@ -1498,6 +1499,7 @@ Company's description. For reference only or to be used in custom print formats.
 Company's main email address. For reference only or to be used in custom print formats.,Adresse email principale de la société. Pour information ou pour utiliser dans un format d'impression personnalisé.,
 Company's main fax number. For reference only or to be used in custom print formats.,Numéro de fax principal de la société. Pour information ou pour utiliser dans un format d'impression personnalisé.,
 Company's main phone number. For reference only or to be used in custom print formats.,Numéro de téléphone principal de la société. Pour information ou pour utiliser dans un format d'impression personnalisé.,
+Company's name abbreviation. Used to differentiate master data between several companies.,Abrévation du nom de la société. Sert à différencier les données de base entre différentes sociétés.,
 Company's name abbreviation. Used to differentiate master date between several companies.,Abréviation du nom de la société. Utilisé pour différencier les données de base entre plusieurs sociétés.,
 Company's registration details. For reference only or to be used in custom print formats.,Informations d'enregistrement de la société. Pour information ou pour utiliser dans un format d'impression personnalisé.,
 Company's website. For reference only or to be used in custom print formats.,Site web de la société. Pour information ou pour utiliser dans un format d'impression personnalisé.,
@@ -4017,6 +4019,8 @@ Let's Setup the Payroll Module.,Configuration du module de paie.,
 Let's Setup the Stock Module.,Configuration du module de gestion des stocks,
 Let's set up the Buying Module.,Configuration du module d'achats,
 Let's set up your CRM.,Configuration du CRM,
+Let's set up your accounts and taxes.,Configurez votre comptabilité et vos taxes,
+Let's set up your asset management,Configurez votre gestion d'actifs,
 Lets create a Tax Template for Sales ,Créer un modèle de tax pour la vente,
 Letter Head,En-tête,
 Letter Heads for print templates.,En-Têtes pour les modèles d'impression.,
@@ -5566,6 +5570,7 @@ Point of Sale,Point de Vente,
 Point-of-Sale Profile,Profil de Point-De-Vente,
 Points available:,Points disponibles,
 Policy No,Politique N°,
+Policy Title,Titre de la politique,
 Policy number,Numéro de politique,
 Portal Payment Gateways Template,Modèle de passerelles de paiement du portail,
 Portal Payment Gateways,Passerelles de paiement du portail,
@@ -6403,6 +6408,7 @@ Row #{0}: Cannot delete item {1} which is assigned to customer's purchase order.
 Row #{0}: Cannot select Supplier Warehouse while suppling raw materials to subcontractor,Ligne #{0}: Il n'est pas possible de sélectionner un entrepôt fournisseur si l'on fournit les matières premières à un sous-traitant,
 Row #{0}: Cannot set Rate if amount is greater than billed amount for Item {1}.,Ligne n ° {0}: impossible de définir le tarif si le montant est supérieur au montant facturé pour l'élément {1}.,
 Row #{0}: Cannot set amount or formula for Salary Component {1} with Variable Based On Taxable Salary,Ligne #{0}: Il n'est pas possible de définir un montant ou une formule pour la composante de salaire {1} avec une variable basée sur le salaire taxable,
+Row #{0}: Child Item should not be a Product Bundle. Please remove Item {1} and Save,Ligne #{0}: Le sous-article ne doit pas être un ensemble de produit. Veuillez retirer l'article `{0}` et enregistrer,
 Row #{0}: Clearance date {1} cannot be before Cheque Date {2},Ligne #{0} : La date de rapprochement {1} ne peut pas être antérieure à la Date du Chèque {2},
 Row #{0}: Cost Center {1} does not belong to company {2},Ligne #{0}: Le centre de coûts {1} n'appartient pas à la société {2},
 Row #{0}: Duplicate entry in References {1} {2},Ligne # {0}: entrée en double dans les références {1} {2},
@@ -7735,6 +7741,7 @@ The Stock Module is all set up!,Le module de gestion des stocks est configuré,
 The accounting module is set up !,Le module de comptabilité est configuré !,
 The accounts are set by the system automatically but do confirm these defaults,Les comptes sont définis automatiquement par le système mais confirmez ces valeurs par défaut,
 The allocated amount ({0}) is greater than the unreconciled amount ({1}) for {2} {3}.,Le montant alloué ({0} est supérieur au montant non rapproché ({1}) pour {2} {3},
+The asset module is all set up!,Le module Actifs est configuré !,
 The company this template should apply to.,La société à laquelle ce modèle est lié,
 The corresponding invoice could not be found,La facture correspondante n'a pas pu être trouvée,
 The coupon code use has exceeded the maximum allowed.,Ce code promotionnel a déjà été utilisé plus de fois que la quantité maximum autorisée.,
