feat: Down payment invoices

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -2041,6 +2041,8 @@ Default Deferred Expense Account,Compte de charges comptabilisés d'avance par d
 Default Deferred Revenue Account,Compte de produits comptabilisés d'avance par défaut,
 Default Dimension,Dimension par défaut,
 Default Distance Unit,Unité de distance par défaut,
+Default Down Payment Payable Account,Compte d'acompte fournisseur par défaut,
+Default Down Payment Receivable Account,Compte d'acompte client par défaut,
 Default Employee Advance Account,Compte d'avances versées aux employés par défaut,
 Default Expense Account,Compte de Charges par Défaut,
 Default Expense Claim Payable Account,Compte de notes de frais par défaut,
@@ -2352,6 +2354,10 @@ Don't send Employee Birthday Reminders,Ne pas envoyer de rappel pour le Jour d'A
 Done,Terminé,
 Doors,Portes,
 Double Declining Balance,Double Solde Dégressif,
+Down Payment Percentage,Pourcentage d'acompte,
+Down Payment Rate,Pourcentage d'acompte,
+Down Payment,Acompte,
+Down payment invoices can only be made against a single sales order.,Les factures d'acompte ne peuvent être liées qu'à un seul bon de commande,
 Download JSON,Télécharger le JSON,
 Download Materials Required,Télécharge les matériaux requis,
 Download PDF,Télécharger au Format PDF,
@@ -3642,6 +3648,8 @@ Is Day Book Data Processed,Données de journal traitées,
 Is Default Account,Est le compte par défaut,
 Is Default,Par défaut,
 Is Discounted,Est affacturée,
+Is Down Payment Invoice,Facture d'acompte,
+Is Down Payment Item,Article d'acompte,
 Is Earned Leave,Est un congé acquis,
 Is Existing Asset,Est Actif Existant,
 Is Expired,Est expiré,
@@ -3989,7 +3997,6 @@ Leave Without Pay,Congé Sans Solde,
 Leave allocation %s is linked with leave application %s,L'allocation de congés %s est liée avec la demande de congés %s,
 Leave and Attendance,Congés et Présences,
 Leave application is linked with leave allocations {0}. Leave application cannot be set as leave without pay,La demande congé est liée à la demande de congés {0}. Cette demande de congés ne peut pas être pour un congé sans solde.,
-"Leave blank for home.\nThis is relative to site URL, for example ""about"" will redirect to ""https://yoursitename.com/about""","Laisser vide pour la page d'accueil. Relatif à l'URL du site, par exemple ""contact"" redirigera vers ""https://votresite.com/contact""",
 Leave blank if the Supplier is blocked indefinitely,Laisser vide si le fournisseur est bloqué indéfiniment,
 Leave blank to use the standard Delivery Note format,Laissez vide pour utiliser le format de bon de livraison standard,
 "Leave cannot be allocated before {0}, as leave balance has already been carry-forwarded in the future leave allocation record {1}","Congé ne peut être alloué avant le {0}, car le solde de congés a déjà été reporté dans la feuille d'allocation de congés futurs {1}",
@@ -4018,6 +4025,10 @@ Let's Setup the Human Resource Module. ,Configuration du module de resources hum
 Let's Setup the Payroll Module.,Configuration du module de paie.,
 Let's Setup the Stock Module.,Configuration du module de gestion des stocks,
 Let's set up the Buying Module.,Configuration du module d'achats,
+Let's set up the Human Resource module.,Configurez le module de ressources humaines,
+Let's set up the Payroll module.,Configurez le module de paie,
+Let's set up the Selling module.,Configurez le module de vente,
+Let's set up the buying module.,Configurez le module d'achats,
 Let's set up your CRM.,Configuration du CRM,
 Let's set up your accounts and taxes.,Configurez votre comptabilité et vos taxes,
 Let's set up your asset management,Configurez votre gestion d'actifs,
@@ -5117,6 +5128,7 @@ Payment Entry against {0} {1} via Payment Request {2},Ecriture de paiement pour 
 Payment Entry already exists,L’Écriture de Paiement existe déjà,
 Payment Entry has been modified after you pulled it. Please pull it again.,L’écriture de paiement a été modifiée après son ajout dans le tableau des avances. Veuillez l'ajouter à nouveau.,
 Payment Entry is already created,L’Écriture de Paiement est déjà créée,
+"Payment Entry {0} is linked against {1} {2}, check if it should be pulled as advance in this invoice.",L'écriture de paiement {0} est liée avec la {1} {2}. Vérifiez si vous ne souhaitez pas l'associer avec cette facture.,
 Payment Entry,Écriture de paiement,
 Payment Failed. Please check your GoCardless Account for more details,Le paiement a échoué. Veuillez vérifier votre compte GoCardless pour plus de détails,
 Payment From / To,Paiement De / À,
@@ -6981,6 +6993,7 @@ Set status as Closed,Mettre statut 'Fermé',
 Set targets Item Group-wise for this Sales Person.,Définir des objectifs par Groupe d'articles pour ce Commercial,
 Set the default account for the {0} {1},Définir le compte par défaut pour le {0} {1},
 Set this if the customer is a Public Administration company.,Cochez cette case si le client est une administration publique,
+Set up your warehouses,Configurez vos entrepôts,
 Set {0} in asset category {1} or company {2},Définissez {0} dans la catégorie d'actifs {1} ou la société {2},
 Set {0} in company {1},Définir {0} dans la société {1},
 Set,Définir,
@@ -7726,12 +7739,14 @@ The Asset Module is all set up!,Le module de gestion des actifs est configuré !
 The BOM which will be replaced,La nomenclature qui sera remplacée,
 The Brand,La Marque,
 The Buying Module is all set up!,Le module de gestion des achats est configuré !,
+The CRM Module is set up!,Le module CRM est configuré !,
 The Campaign '{0}' already exists for the {1} '{2}',La campagne '{0}' existe déjà pour le/la {1} '{2}',
 The Condition '{0}' is invalid,La condition '{0}' est invalide,
 The HR Module is all set up!,Le module de gestion des ressources humaines est configuré !,
 The Item {0} cannot have Batch,L'Article {0} ne peut être en Lot,
 The Loyalty Program isn't valid for the selected company,Le programme de fidélité n'est pas valable pour la société sélectionnée,
 The Payment Term at row {0} is possibly a duplicate.,Le délai de paiement à la ligne {0} est probablement un doublon.,
+The Payroll Module is all set up!,Le module de paie est configuré !,
 The Payroll is all set up!,Le module de paie est configurée!,
 The Selling Module is all set up!,Le module de ventes est configuré!,
 "The Stock Entry of type 'Manufacture' is known as backflush. Raw materials being consumed to manufacture finished goods is known as backflushing. <br><br> When creating Manufacture Entry, raw-material items are backflushed based on BOM of production item. If you want raw-material items to be backflushed based on Material Transfer entry made against that Work Order instead, then you can set it under this field.","Les écritures de stock de type 'Production' sont appelées de la post-déduction. Les matières premières consommées pour créer des produits finis sont post-déduites. <br><br> Lors de création d'écritures de production, les matières premières sont post-déduites sur la base de la nomenclature de l'article produit. Si vous préférez que vos matières premières soient post-déduites sur la base des écritures de transfer de matériaux liées à l'ordre de travail, alors vous pouvez le définir grâce à ce ce champ.",
@@ -7742,6 +7757,7 @@ The accounting module is set up !,Le module de comptabilité est configuré !,
 The accounts are set by the system automatically but do confirm these defaults,Les comptes sont définis automatiquement par le système mais confirmez ces valeurs par défaut,
 The allocated amount ({0}) is greater than the unreconciled amount ({1}) for {2} {3}.,Le montant alloué ({0} est supérieur au montant non rapproché ({1}) pour {2} {3},
 The asset module is all set up!,Le module Actifs est configuré !,
+The buying module is all set up!,Le module d'achats est configuré !,
 The company this template should apply to.,La société à laquelle ce modèle est lié,
 The corresponding invoice could not be found,La facture correspondante n'a pas pu être trouvée,
 The coupon code use has exceeded the maximum allowed.,Ce code promotionnel a déjà été utilisé plus de fois que la quantité maximum autorisée.,
@@ -8012,26 +8028,26 @@ Token Endpoint,Point de terminaison de jeton,
 Too many columns. Export the report and print it using a spreadsheet application.,Trop de colonnes. Exportez le rapport et imprimez-le à l'aide d'un tableur.,
 Tools,Outils,
 Top Customers,Clients principaux,
-Top Suppliers,Principaux fournisseurs,
-Total (Company Currency),Total (Devise Société),
+Top Suppliers,Fournisseurs principaux,
+Total (Company Currency),Total (Devise société),
 Total (Credit),Total (Crédit),
-Total Absent,Total des Absences,
-Total Achieved,Total Obtenu,
+Total Absent,Total des absences,
+Total Achieved,Total obtenu,
 Total Active Items,Total des articles actifs,
 Total Actual Amount,Montant total réel,
 Total Actual,Total Réel,
-Total Additional Costs,Total des Coûts Additionnels,
-Total Advance Amount,Montant total de l'avance,
-Total Advance,Total Avance,
-Total Allocated Amount (Company Currency),Montant Total Alloué (Devise Société),
-Total Allocated Amount,Montant Total Alloué,
+Total Additional Costs,Total des coûts additionnels,
+Total Advance Amount,Montant total de l'acompte/avance,
+Total Advance,Acompte/avance total,
+Total Allocated Amount (Company Currency),Montant total alloué (Devise société),
+Total Allocated Amount,Montant total alloué,
 Total Allocated Leaves,Total des congés alloués,
 Total Amount Credited,Montant total crédité,
-Total Amount Currency,Montant Total en Devise,
+Total Amount Currency,Montant total en devise,
 Total Amount Paid,Montant total payé,
-Total Amount Reimbursed,Montant Ttotal remboursé,
-Total Amount in Words,Montant Total En Toutes Lettres,
-Total Amount {0},Montant Total {0},
+Total Amount Reimbursed,Montant total remboursé,
+Total Amount in Words,Montant total en toutes lettres,
+Total Amount {0},Montant total {0},
 Total Amount,Montant total,
 Total Applicable Charges in Purchase Receipt Items table must be same as Total Taxes and Charges,Total des Frais Applicables dans la Table des Articles de Reçus d’Achat doit être égal au Total des taxes et frais,
 Total Asset,Total de l'actif,
@@ -8820,6 +8836,7 @@ lft,lft,
 material_request_item,article_demande_de_materiel,
 mode of payment,mode de paiement,
 modified,modifié,
+negative outstanding amount,montant restant dû négatif,
 net pay info,Info de salaire net,
 next,suiv.,
 of,de,
