feat: Item booking rate report

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -1091,6 +1091,7 @@ Booked slot end time.,Heure de fin du créneau réservé,
 Booked slot start time.,Heure de début du créneau réservé,
 Booked,Réservé,
 Booking Calendar,Calendrier de réservation,
+Booking rate,Taux de réservation,
 Bookings,Réservations,
 Both Trial Period Start Date and Trial Period End Date must be set,La date de début de la période d'essai et la date de fin de la période d'essai doivent être définies,
 Both Warehouse must belong to same Company,Les deux Entrepôt doivent appartenir à la même Société,
@@ -1271,6 +1272,7 @@ Cannot {0} {1} {2} without any negative outstanding invoice,Can not {0} {1} {2} 
 "Capacity Planning Error, planned start time can not be same as end time",Erreur de planification: L'heure de début ne peut pas être identique à l'heure de fin.,
 Capacity Planning For (Days),Planification de Capacité Pendant (Jours),
 Capacity Planning,Planification de Capacité,
+Capacity,Capacité,
 Capital Equipments,Capitaux Immobilisés,
 Capital Stock,Capital Social,
 Capital Work In Progress Account,Compte d'immobilisation en cours,
@@ -3300,6 +3302,7 @@ Hour Rate,Tarif Horaire,
 Hour,Heure,
 Hourly status updates for mandates and payments,Mises à jour des statuts des mandats et paiements toutes les heures,
 Hourly,Toutes les heures,
+Hours Booked,Heures réservées,
 Hours,Heures,
 House rent paid days overlapping with {0},Dates de paiement du loyer en conflit avec {0},
 House rented dates required for exemption calculation,Les dates de location du logement sont requises pour le calcul de l'exemption,
@@ -3727,6 +3730,7 @@ Item Barcode,Code barre de l'article,
 Item Booking Calendar,Calendrier de réservation d'articles,
 Item Booking Calendars,Calendriers de réservation,
 Item Booking Default Calendar,Calendrier par défaut pour les réservations d'articles,
+Item Booking Rate,Taux de réservation des articles,
 Item Booking,Réservation d'articles,
 Item Cart,Article du Panier,
 Item Classification,Classification de l'Article,
@@ -4025,6 +4029,7 @@ Let's Setup the Human Resource Module. ,Configuration du module de resources hum
 Let's Setup the Payroll Module.,Configuration du module de paie.,
 Let's Setup the Stock Module.,Configuration du module de gestion des stocks,
 Let's set up the Buying Module.,Configuration du module d'achats,
+Let's set up the Buying module.,Configurez le module d'achats,
 Let's set up the Human Resource module.,Configurez le module de ressources humaines,
 Let's set up the Payroll module.,Configurez le module de paie,
 Let's set up the Selling module.,Configurez le module de vente,
@@ -5397,6 +5402,7 @@ Please identify/create Account (Group) for type - {0},Veuillez identifier/créer
 Please identify/create Account (Ledger) for type - {0},Veuillez identifier/créer un compte comptable de type - {0},
 Please link this bank account with at least one Stripe account,Veuille lier ce compte bancaire avec au moins un compte Stripe,
 Please link your bank with Plaid first.,Veuillez d'abord lier votre banque avec Plaid,
+Please make sure the end time is greater than the start time,Veuillez vous assurer que l'heure de fin est après l'heure de début,
 Please make sure you really want to delete all the transactions for this company. Your master data will remain as it is. This action cannot be undone.,Veuillez vous assurer que vous voulez vraiment supprimer tous les transactions de cette société. Vos données de base resteront intactes. Cette action ne peut être annulée.,
 Please mention Basic and HRA component in Company,Veuillez mentionner les composantes basique et HRA dans la société,
 Please mention Round Off Account in Company,Veuillez indiquer le compte d’arrondis de la société,
