--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -1301,7 +1301,7 @@ Cash or Bank Account is mandatory for making payment entry,Espèces ou Compte ba
 Cash/Bank Account,Compte Caisse/Banque,
 Cash,Espèces,
 Cashier,Caissier,
-Casual Leave,Congé Occasionnel,
+Casual Leave,Autres congés,
 Catch All,Groupe d'assignation par défaut,
 Category Name,Nom de la catégorie,
 Category-wise Asset Value,Valeur des actifs par catégorie,
@@ -1509,7 +1509,7 @@ Company's website. For reference only or to be used in custom print formats.,Sit
 Company,Société,
 Compare BOMs for changes in Raw Materials and Operations,Comparer les listes de matériaux pour analyser les changements dans les matières premières et les opérations,
 Compensatory Leave Request,Demande de congé compensatoire,
-Compensatory Off,Congé Compensatoire,
+Compensatory Off,RTT,
 Compensatory leave request days not in valid holidays,Les jours de la demande de congé compensatoire ne sont pas dans des vacances valides,
 Compensatory leave,Congés compensatoires,
 "Compensatory leaves are leaves granted for working overtime or on holidays, normally compensated as an encashable leave. You can check this option to mark the Leave Type as compensatory. An Employee can request for compensatory leaves using Compensatory Leave Request.",Les congés compensatoire sont des congés accordés en contrepartie d'heures supplémentaires ou de travail pendant les jours fériés. Ils peuvent être encaissables. Un employé peut faire une demande de congés compensatoires via les demandes de congés compensatoires.,
@@ -3997,7 +3997,7 @@ Leave Type,Type de congé,
 Leave Types,Types de congés,
 Leave Without Pay does not match with approved Leave Application records,Congé sans solde ne correspond pas aux Feuilles de Demandes de Congé Approuvées,
 Leave Without Pay does not match with approved {} records,Les congés sans solde ne correspondent pas aux écritures de {} approuvées,
-Leave Without Pay,Congé Sans Solde,
+Leave Without Pay,Congés sans solde,
 Leave allocation %s is linked with leave application %s,L'allocation de congés %s est liée avec la demande de congés %s,
 Leave and Attendance,Congés et Présences,
 Leave application is linked with leave allocations {0}. Leave application cannot be set as leave without pay,La demande congé est liée à la demande de congés {0}. Cette demande de congés ne peut pas être pour un congé sans solde.,
@@ -5698,7 +5698,7 @@ Priority {0} has been repeated.,La priorité {0} a été répétée.,
 Priority,Priorité,
 Private Equity,Capital Investissement,
 Private,Privé,
-Privilege Leave,Congé de Privilège,
+Privilege Leave,Congés payés,
 Probability (%),Probabilité (%),
 Probation,Essai,
 Probationary Period,Période d’Essai,
@@ -7142,7 +7142,7 @@ Show this slideshow at the top of the page,Afficher ce diaporama en haut de la p
 Show unclosed fiscal year's P&L balances,Afficher le solde du compte de résulat des exercices non cloturés,
 Show zero values,Afficher les valeurs nulles,
 Show {0},Voir {0},
-Sick Leave,Congé Maladie,
+Sick Leave,Congés maladie,
 Signatory Position,Position Signataire,
 Signed By (Company),Signé par (Société),
 Signed On,Signé le,
@@ -8745,7 +8745,7 @@ You added ,Vous avez ajouté,
 You are not authorized to add or update entries before {0},Vous n'êtes pas autorisé à ajouter ou faire une mise à jour des écritures avant le {0},
 You are not authorized to approve leaves on Block Dates,Vous n'êtes pas autorisé à approuver les congés sur les Dates Bloquées,
 You are not authorized to set Frozen value,Vous n'êtes pas autorisé à définir des valeurs gelées,
-You are not present all day(s) between compensatory leave request days,Vous n'êtes pas présent(e) tous les jours vos demandes de congé compensatoire,
+You are not present all day(s) between compensatory leave request days,Vous n'êtes pas présent·e tous les jours entre vos dates de demande de congé compensatoire,
 You can also copy-paste this link in your browser,Vous pouvez aussi copier-coller ce lien dans votre navigateur,
 "You can claim only an amount of {0}, the rest amount {1} should be in the application \
 				as pro-rata component","Vous pouvez uniquement réclamer un montant de {0}, le montant restant {1} doit être dans la demande \ en tant que composant au pro-rata",
