fix: leave type

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -3074,9 +3074,9 @@ Generate a sales order at beginning Of period,Générer une commande client au d
 Generate e-Way Bill JSON,Générer une facture e-way en JSON,
 "Generate packing slips for packages to be delivered. Used to notify package number, package contents and its weight.","Générer les bordereaux des colis à livrer. Utilisé pour indiquer le numéro de colis, le contenu et son poids.",
 Generate the invoice at beginning of period,Générer une facture au début de la période,
-Get Advances Paid,Obtenir Acomptes Payés,
-Get Advances Received,Obtenir Acomptes Reçus,
-Get Details From Declaration,Obtenir les détails de la déclaration,
+Get Advances Paid,Récupérer les acomptes payés,
+Get Advances Received,Récupérer les acomptes reçus,
+Get Details From Declaration,Récupérer les détails de la déclaration,
 Get Employees,Obtenir des employés,
 Get Entries,Obtenir des entrées,
 Get French Bank Holidays,Obtenir les jours fériés français,
