fix: Retest corrections

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -545,6 +545,7 @@ Alternating entries as IN and OUT during the same shift,Alterner les entrées 'E
 Alternative Item Code,Code de l'article alternatif,
 Alternative Item Name,Nom de l'article alternatif,
 Alternative item must not be same as item code,L'article alternatif ne doit pas être le même que le code article,
+Alternative items,Articles alternatifs,
 Always sync your products from Amazon MWS before synching the Orders details,Synchronisez toujours vos produits depuis Amazon MWS avant de synchroniser les détails des commandes.,
 Always sync your products from Amazon MWS before syncing the Orders details,Toujours synchroniser les produits depuis Amazon MWS avant de synchroniser les détails de la commande,
 Amazon MWS Settings,Paramètres Amazon MWS,
@@ -573,6 +574,7 @@ Amount {0} {1} against {2} {3},Montant {0} {1} pour {2} {3},
 Amount {0} {1} deducted against {2},Montant {0} {1} déduit de {2},
 Amount {0} {1} transferred from {2} to {3},Montant {0} {1} transféré de {2} à {3},
 Amount {0} {1} {2} {3},Montant {0} {1} {2} {3},
+Amount*,Montant*,
 Amount,Montant,
 Amounts,Montants,
 Amt,Nb,
@@ -1326,6 +1328,7 @@ Change,Changement,
 Changes in {0},Modifications dans {0},
 Changing Customer Group for the selected Customer is not allowed.,Le changement de Groupe de clients n'est pas autorisé pour le Client sélectionné.,
 Channel Partner,Partenaire de Canal,
+Charge Date,Date de prélèvement,
 Charge of type 'Actual' in row {0} cannot be included in Item Rate,Charge de type ' réel ' à la ligne {0} ne peut pas être inclus dans le prix de l'article,
 Chargeable,Facturable,
 Charges Incurred,Frais Afférents,
@@ -2349,6 +2352,8 @@ Document,Document,
 Documentation,Documentation,
 Documents,Documents,
 Dokos Company,Société Dokos,
+Dokos Payment Status,Statut du paiement Dokos,
+Dokos Payment,Paiement Dokos,
 Domain,Domaine,
 Domains,Domaines,
 Domestic,National,
@@ -2360,6 +2365,7 @@ Down Payment Percentage,Pourcentage d'acompte,
 Down Payment Rate,Pourcentage d'acompte,
 Down Payment,Acompte,
 Down payment invoices can only be made against a single sales order.,Les factures d'acompte ne peuvent être liées qu'à un seul bon de commande,
+Download DATEV File,Télécharger un fichier DATEV,
 Download JSON,Télécharger le JSON,
 Download Materials Required,Télécharge les matériaux requis,
 Download PDF,Télécharger au Format PDF,
@@ -2704,6 +2710,7 @@ Exchange Rate,Taux de change,
 Excise Entry,Écriture d'accise,
 Excise Invoice,Facture d'Accise,
 Excise Page Number,Numéro de Page d'Accise,
+Exclude from leave acquisition,Exclure lors de l'acquisition des congés,
 Execution,Exécution,
 Executive Search,Recrutement de Cadres,
 Exempted from Income Tax,Exempt d'impôt sur le revenu,
@@ -2801,6 +2808,7 @@ Family Background,Antécédents Familiaux,
 Fax,Fax,
 February,Février,
 Fee Amount,Montant des frais,
+Feedback By,Retour d'expérience par,
 Feedback Submitted,Valider un commentaire,
 Feedback,Commentaire,
 Fees included in the total amount,Frais inclus dans le montant total,
@@ -3126,8 +3134,11 @@ Go to Suppliers,Aller aux Fournisseurs,
 Go to Users,Aller aux Utilisateurs,
 GoCardless Mandate,Mandat GoCardless,
 GoCardless Payment Error,Erreur de paiement GoCardless,
+GoCardless Payment ID,ID de paiement GoCardless,
+GoCardless Payments,Paiements GoCardless,
 GoCardless SEPA Mandate,Mandat SEPA GoCardless,
 GoCardless Settings,Paramètres GoCardless,
+GoCardless Status,Statut GoCardless,
 GoCardless direct processing failed for {0},Le traitement direct par GoCardless a échoué pour {0},
 GoCardless invoice submission error,Erreur de validation d'une facture GoCardless,
 GoCardless mandate retrieval error,Erreur de récupération d'un mandat Sepa,
@@ -3344,6 +3355,7 @@ If Income or Expense,Si Produits ou Charges,
 "If Shopify not contains a customer in Order, then while syncing Orders, the system will consider default customer for order","Si Shopify ne contient pas de client dans la commande, lors de la synchronisation des commandes le système considérera le client par défaut pour la commande",
 "If blank, parent Warehouse Account or company default will be considered","Si vide, le compte de l'entrepôt parent ou celui de la société seront pris en compte",
 "If checked, Total no. of Working Days will include holidays, and this will reduce the value of Salary Per Day","Si cochée, Le nombre total de Jours Ouvrés comprendra les vacances, ce qui réduira la valeur du Salaire Par Jour",
+"If checked, all leave days taken with this leave type will be considered as absent when calculating the attendance for acquired leaves calculation.","Si coché, tous les jours de congés pris avec ce type de congé seront considérés comme des jours d'absence lors de la vérification des présences pour le calcul des congés acquis.",
 "If checked, employees will be allowed to apply for this leave type even if they don't have a sufficient balance. This will result in a negative balance for this type of leaves.","Si coché, les employés seront autorisés à demander ce type de congés même s'ils n'ont pas un solde suffisant. Cela résultera en un solde négatif pour ce type de congés.",
 "If checked, hides and disables Rounded Total field in Salary Slips","Si coché, le champ total arrondi sera caché dans les fiches de paie",
 "If checked, the Home page will be the default Item Group for the website","Si cochée, la page d'Accueil pour le site sera le Groupe d'article par défaut",
@@ -5203,6 +5215,7 @@ Payroll Period Date,Date de la période de paie,
 Payroll Period,Période de paie,
 Payroll Periods,Périodes de paie,
 Payroll Settings,Paramètres de Paie,
+Payroll date can not be greater than employee's relieving date.,La date de paie ne peut pas être supérieure à la date de départ de l'employé.,
 Payroll date can not be less than employee's joining date.,La date de paie ne peut pas être avant la date d'embauche de l'employé,
 Payroll date can not be less than employee's joining date,La date de paie ne peut être inférieure à la date d'adhésion de l'employé,
 Payroll,Paie,
@@ -6328,6 +6341,7 @@ Response Options,Options de réponse,
 Response Result Key Path,Chemin de la clé du résultat de réponse,
 Response Time Period,Période de temps de réponse,
 Response Time for {0} at index {1} can't be greater than Resolution Time.,Le temps de réponse pour {0} à l'index {1} ne peut pas être supérieur au temps de résolution.,
+Response Time for {0} priority in row {1} can't be greater than Resolution Time.,Le temps de réponse pour la priorité {0} à la ligne {1} ne peut être supérieur au temps de résolution.,
 Response Time,Temps de réponse,
 Response and Resolution Time,Temps de réponse et résolution,
 Response and Resoution Time,Temps de réponse et résolution,
@@ -6968,6 +6982,7 @@ Set New Release Date,Définir la nouvelle date de fin de mise en attente,
 Set Project and all Tasks to status {0}?,Changer le statut du projet et de toutes les tâches à {0} ?,
 Set Qty in Transactions based on Serial No Input,Définir la quantité dans les transactions en fonction des données du numéro de série,
 Set Reserve Warehouse,Définir un entrepôt de réserve,
+Set Response Time and Resolution Time for Priority {0} in row {1}.,Définissez le temps de réponse et le temps de résolution pour la priorité {0} à la ligne {1},
 Set Response Time and Resolution for Priority {0} at index {1}.,Définissez le temps de réponse et de résolution pour la priorité {0} à l'index {1}.,
 Set Shipping Address or Billing Address,Définissez une adresse de livraison ou une adresse de facturation,
 Set Source Warehouse,Définir l'entrepôt source,
@@ -6998,6 +7013,7 @@ Set status as Closed,Mettre statut 'Fermé',
 Set targets Item Group-wise for this Sales Person.,Définir des objectifs par Groupe d'articles pour ce Commercial,
 Set the default account for the {0} {1},Définir le compte par défaut pour le {0} {1},
 Set this if the customer is a Public Administration company.,Cochez cette case si le client est une administration publique,
+Set up your Warehouse,Configurez vos entrepôts,
 Set up your warehouses,Configurez vos entrepôts,
 Set {0} in asset category {1} or company {2},Définissez {0} dans la catégorie d'actifs {1} ou la société {2},
 Set {0} in company {1},Définir {0} dans la société {1},
@@ -8194,6 +8210,7 @@ Total {0} ({1}),Total {0} ({1}),
 "Total {0} for all items is zero, may be you should change 'Distribute Charges Based On'","Le Total {0} pour tous les articles est nul, peut-être devriez-vous modifier ‘Distribuez les Frais sur la Base de’",
 Total(Amt),Total (Mnt),
 Total(Qty),Total (Qté),
+Total*,Total*,
 Total,Total,
 Totals,Totaux,
 Traceability,Traçabilité,
@@ -8316,6 +8333,7 @@ Unable to find score starting at {0}. You need to have standing scores covering 
 Unable to find the time slot in the next {0} days for the operation {1}.,Impossible de trouver un créneau disponible dans les {0} prochains jours pour l'opération {1}.,
 Unable to find variable: ,Impossible de trouver une variable:,
 Unallocated Amount,Montant non alloué,
+Unavailable,Indisponible,
 Unblock Invoice,Débloquer la facture,
 Uncheck all,Décocher tout,
 Unclaimed amount,Montant non réclamé,
@@ -8924,6 +8942,7 @@ woocommerce - {0},woocommerce - {0},
 {0} is not a valid Value for Attribute {1} of Item {2}.,{0} n'est pas une valeur valide pour l'attribut {1} de l'article {2},
 {0} is not a valid state! Check for typos or enter the ISO code for your state.,{0} n'est pas un état valide! Vérifiez que vous n'avez pas fait d'erreur ou entrez le code ISO de votre état.,
 {0} is not added in the table,Ajoutez un {0} dans la table,
+{0} is not enabled in {1},{0} n'est pas activé dans les {1},
 {0} is not in Optional Holiday List,{0} n'est pas dans la liste des jours fériés facultatifs,
 {0} is not in a valid Payroll Period,{0} n'est pas dans une période de paie valide,
 {0} is not the default supplier for any items.,{0} n'est le fournisseur par défaut pour aucun article,
