fix: Better error messages for item booking

--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -3166,9 +3166,9 @@ Goods In Transit,Bien en transit,
 Goods Transferred,Bien transférés,
 Goods and Services Tax (GST India),Taxe sur les biens et services (GST India),
 Goods are already received against the outward entry {0},Biens déjà reçus pour l'écriture sortante {0},
-"Google Calendar - Could not delete Event {0} from Google Calendar, error code {1}.","Google Agenda - L'évenement n'a pas pu être supprimé dans le Google Agenda {0}, code d'erreur {1}",
+"Google Calendar - Could not delete Event {0} from Google Calendar, error code {1}.","Google Agenda - L'évenement {0} n'a pas pu être supprimé dans le Google Agenda, code d'erreur {1}",
 "Google Calendar - Could not insert event in Google Calendar {0}, error code {1}.","Google Agenda - L'évenement n'a pas pu être créé dans le Google Agenda {0}, code d'erreur {1}",
-"Google Calendar - Could not update Event {0} in Google Calendar, error code {1}.","Google Agenda - L'évenement n'a pas pu être mis à jour dans le Google Agenda {0}, code d'erreur {1}",
+"Google Calendar - Could not update Event {0} in Google Calendar, error code {1}.","Google Agenda - L'évenement {0} n'a pas pu être mis à jour dans le Google Agenda, code d'erreur {1}",
 Google Calendar Event ID,ID d'événement Google Agenda,
 Google Calendar ID,ID Google Agenda,
 Google Calendar,Google Agenda,
