--- a/erpnext/translations/fr.csv
+++ b/erpnext/translations/fr.csv
@@ -4418,6 +4418,7 @@ Mention if non-standard payable account,Veuillez mentionner s'il s'agit d'un com
 Mention if non-standard receivable account applicable,Mentionner si le compte débiteur applicable n'est pas standard,
 Mention if non-standard receivable account,Renseigner si le compte débiteur n'est pas standard,
 Merge Account,Fusionner le compte,
+Merge not allowed,La fusion n'est pas autorisée,
 Merge with Existing Account,Fusionner avec un compte existant,
 Merge,Fusionner,
 "Merging is only possible if following properties are same in both records. Is Group, Root Type, Company","La combinaison est possible seulement si les propriétés suivantes sont les mêmes dans les deux dossiers. Est Groupe, Type de racine, Société",
@@ -6259,6 +6260,7 @@ Reqd Qty,Qté obligatoire,
 Reqd by Date,Date de livraison,
 Reqd by date,Date de livraison,
 Request Data,Données de la requête,
+Request For Quotation,Appel d'offre,
 Request Type,Type de Demande,
 Request a Quotation,Demander un devis,
 Request for Information,Demande de Renseignements,
@@ -6800,6 +6802,7 @@ Select Fiscal Year...,Sélectionner Exercice ...,
 Select Item (optional),Sélectionnez l'Article (facultatif),
 Select Items based on Delivery Date,Sélectionnez les articles en fonction de la Date de Livraison,
 Select Items to Manufacture,Sélectionner les articles à produire,
+Select Items,Sélectionner des articles,
 Select Loyalty Program,Sélectionner un programme de fidélité,
 Select Maximum Of 1,Sélectionnez un maximum de 1,
 Select POS Profile,Sélectionnez le profil POS,
@@ -7416,6 +7419,7 @@ Stock Queue (FIFO),File d'attente du stock (PEPS),
 Stock Received But Not Billed,Stock reçu non facturé,
 Stock Reconciliation Item,Article de réconciliation du stock,
 Stock Reconciliation,Réconciliation du stock,
+Stock Reconciliations,Réconciliations de stock,
 Stock Reports,Rapports de stock,
 Stock Settings,Paramètres des stocks,
 Stock Summary,Solde du stock,
